Main/parser.output
Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt
    3          | stmt_list stmt

    4 stmt: declaration
    5     | assignment
    6     | print_stmt
    7     | input_stmt
    8     | if_stmt
    9     | expr

   10 declaration: DECLARE IDENTIFIER
   11            | DECLARE IDENTIFIER VALUE expr

   12 assignment: SET IDENTIFIER '=' expr
   13           | SET IDENTIFIER TO expr

   14 print_stmt: PRINT expr

   15 input_stmt: INPUT IDENTIFIER
   16           | INPUT IDENTIFIER FROM USER

   17 if_stmt: IF expr THEN stmt_list if_tail

   18 if_tail: ENDIF
   19        | END IF
   20        | STOP
   21        | DONE
   22        | ELSE stmt_list ENDIF
   23        | ELSE stmt_list END IF
   24        | ELSE stmt_list STOP
   25        | ELSE stmt_list DONE
   26        | ELSEIF expr THEN stmt_list if_tail

   27 expr: expr '+' expr
   28     | expr '-' expr
   29     | expr '*' expr
   30     | expr '/' expr
   31     | expr '%' expr
   32     | expr '<' expr
   33     | expr '>' expr
   34     | expr EQ expr
   35     | expr NE expr
   36     | '(' expr ')'
   37     | NUMBER
   38     | IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'%' (37) 31
'(' (40) 36
')' (41) 36
'*' (42) 29
'+' (43) 27
'-' (45) 28
'/' (47) 30
'<' (60) 32
'=' (61) 12
'>' (62) 33
error (256)
DECLARE (258) 10 11
SET (259) 12 13
PRINT (260) 14
INPUT (261) 15 16
FROM (262) 16
USER (263) 16
VALUE (264) 11
IF (265) 17 19 23
ELSE (266) 22 23 24 25
ELSEIF (267) 26
THEN (268) 17 26
ENDIF (269) 18 22
END (270) 19 23
STOP (271) 20 24
DONE (272) 21 25
TO (273) 13
EQ (274) 34
NE (275) 35
IDENTIFIER (276) 10 11 12 13 15 16 38
NUMBER (277) 37


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1, on right: 0
stmt_list (35)
    on left: 2 3, on right: 1 3 17 22 23 24 25 26
stmt (36)
    on left: 4 5 6 7 8 9, on right: 2 3
declaration (37)
    on left: 10 11, on right: 4
assignment (38)
    on left: 12 13, on right: 5
print_stmt (39)
    on left: 14, on right: 6
input_stmt (40)
    on left: 15 16, on right: 7
if_stmt (41)
    on left: 17, on right: 8
if_tail (42)
    on left: 18 19 20 21 22 23 24 25 26, on right: 17 26
expr (43)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38, on right: 9 11 12
    13 14 17 26 27 28 29 30 31 32 33 34 35 36


state 0

    0 $accept: . program $end

    DECLARE     shift, and go to state 1
    SET         shift, and go to state 2
    PRINT       shift, and go to state 3
    INPUT       shift, and go to state 4
    IF          shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    program      go to state 9
    stmt_list    go to state 10
    stmt         go to state 11
    declaration  go to state 12
    assignment   go to state 13
    print_stmt   go to state 14
    input_stmt   go to state 15
    if_stmt      go to state 16
    expr         go to state 17


state 1

   10 declaration: DECLARE . IDENTIFIER
   11            | DECLARE . IDENTIFIER VALUE expr

    IDENTIFIER  shift, and go to state 18


state 2

   12 assignment: SET . IDENTIFIER '=' expr
   13           | SET . IDENTIFIER TO expr

    IDENTIFIER  shift, and go to state 19


state 3

   14 print_stmt: PRINT . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 20


state 4

   15 input_stmt: INPUT . IDENTIFIER
   16           | INPUT . IDENTIFIER FROM USER

    IDENTIFIER  shift, and go to state 21


state 5

   17 if_stmt: IF . expr THEN stmt_list if_tail

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 22


state 6

   38 expr: IDENTIFIER .

    $default  reduce using rule 38 (expr)


state 7

   37 expr: NUMBER .

    $default  reduce using rule 37 (expr)


state 8

   36 expr: '(' . expr ')'

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 23


state 9

    0 $accept: program . $end

    $end  shift, and go to state 24


state 10

    1 program: stmt_list .
    3 stmt_list: stmt_list . stmt

    DECLARE     shift, and go to state 1
    SET         shift, and go to state 2
    PRINT       shift, and go to state 3
    INPUT       shift, and go to state 4
    IF          shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    $default  reduce using rule 1 (program)

    stmt         go to state 25
    declaration  go to state 12
    assignment   go to state 13
    print_stmt   go to state 14
    input_stmt   go to state 15
    if_stmt      go to state 16
    expr         go to state 17


state 11

    2 stmt_list: stmt .

    $default  reduce using rule 2 (stmt_list)


state 12

    4 stmt: declaration .

    $default  reduce using rule 4 (stmt)


state 13

    5 stmt: assignment .

    $default  reduce using rule 5 (stmt)


state 14

    6 stmt: print_stmt .

    $default  reduce using rule 6 (stmt)


state 15

    7 stmt: input_stmt .

    $default  reduce using rule 7 (stmt)


state 16

    8 stmt: if_stmt .

    $default  reduce using rule 8 (stmt)


state 17

    9 stmt: expr .
   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    EQ   shift, and go to state 26
    NE   shift, and go to state 27
    '<'  shift, and go to state 28
    '>'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 9 (stmt)


state 18

   10 declaration: DECLARE IDENTIFIER .
   11            | DECLARE IDENTIFIER . VALUE expr

    VALUE  shift, and go to state 35

    $default  reduce using rule 10 (declaration)


state 19

   12 assignment: SET IDENTIFIER . '=' expr
   13           | SET IDENTIFIER . TO expr

    TO   shift, and go to state 36
    '='  shift, and go to state 37


state 20

   14 print_stmt: PRINT expr .
   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    EQ   shift, and go to state 26
    NE   shift, and go to state 27
    '<'  shift, and go to state 28
    '>'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 14 (print_stmt)


state 21

   15 input_stmt: INPUT IDENTIFIER .
   16           | INPUT IDENTIFIER . FROM USER

    FROM  shift, and go to state 38

    $default  reduce using rule 15 (input_stmt)


state 22

   17 if_stmt: IF expr . THEN stmt_list if_tail
   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    THEN  shift, and go to state 39
    EQ    shift, and go to state 26
    NE    shift, and go to state 27
    '<'   shift, and go to state 28
    '>'   shift, and go to state 29
    '+'   shift, and go to state 30
    '-'   shift, and go to state 31
    '*'   shift, and go to state 32
    '/'   shift, and go to state 33
    '%'   shift, and go to state 34


state 23

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   36     | '(' expr . ')'

    EQ   shift, and go to state 26
    NE   shift, and go to state 27
    '<'  shift, and go to state 28
    '>'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34
    ')'  shift, and go to state 40


state 24

    0 $accept: program $end .

    $default  accept


state 25

    3 stmt_list: stmt_list stmt .

    $default  reduce using rule 3 (stmt_list)


state 26

   34 expr: expr EQ . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 41


state 27

   35 expr: expr NE . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 42


state 28

   32 expr: expr '<' . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 43


state 29

   33 expr: expr '>' . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 44


state 30

   27 expr: expr '+' . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 45


state 31

   28 expr: expr '-' . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 46


state 32

   29 expr: expr '*' . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 47


state 33

   30 expr: expr '/' . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 48


state 34

   31 expr: expr '%' . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 49


state 35

   11 declaration: DECLARE IDENTIFIER VALUE . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 50


state 36

   13 assignment: SET IDENTIFIER TO . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 51


state 37

   12 assignment: SET IDENTIFIER '=' . expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 52


state 38

   16 input_stmt: INPUT IDENTIFIER FROM . USER

    USER  shift, and go to state 53


state 39

   17 if_stmt: IF expr THEN . stmt_list if_tail

    DECLARE     shift, and go to state 1
    SET         shift, and go to state 2
    PRINT       shift, and go to state 3
    INPUT       shift, and go to state 4
    IF          shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    stmt_list    go to state 54
    stmt         go to state 11
    declaration  go to state 12
    assignment   go to state 13
    print_stmt   go to state 14
    input_stmt   go to state 15
    if_stmt      go to state 16
    expr         go to state 17


state 40

   36 expr: '(' expr ')' .

    $default  reduce using rule 36 (expr)


state 41

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   34     | expr EQ expr .
   35     | expr . NE expr

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    EQ   error (nonassociative)
    NE   error (nonassociative)
    '<'  error (nonassociative)
    '>'  error (nonassociative)

    $default  reduce using rule 34 (expr)


state 42

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr
   35     | expr NE expr .

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    EQ   error (nonassociative)
    NE   error (nonassociative)
    '<'  error (nonassociative)
    '>'  error (nonassociative)

    $default  reduce using rule 35 (expr)


state 43

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   32     | expr '<' expr .
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    EQ   error (nonassociative)
    NE   error (nonassociative)
    '<'  error (nonassociative)
    '>'  error (nonassociative)

    $default  reduce using rule 32 (expr)


state 44

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   33     | expr '>' expr .
   34     | expr . EQ expr
   35     | expr . NE expr

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    EQ   error (nonassociative)
    NE   error (nonassociative)
    '<'  error (nonassociative)
    '>'  error (nonassociative)

    $default  reduce using rule 33 (expr)


state 45

   27 expr: expr . '+' expr
   27     | expr '+' expr .
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 27 (expr)


state 46

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   28     | expr '-' expr .
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 28 (expr)


state 47

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   29     | expr '*' expr .
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    $default  reduce using rule 29 (expr)


state 48

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   30     | expr '/' expr .
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    $default  reduce using rule 30 (expr)


state 49

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   31     | expr '%' expr .
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    $default  reduce using rule 31 (expr)


state 50

   11 declaration: DECLARE IDENTIFIER VALUE expr .
   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    EQ   shift, and go to state 26
    NE   shift, and go to state 27
    '<'  shift, and go to state 28
    '>'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 11 (declaration)


state 51

   13 assignment: SET IDENTIFIER TO expr .
   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    EQ   shift, and go to state 26
    NE   shift, and go to state 27
    '<'  shift, and go to state 28
    '>'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 13 (assignment)


state 52

   12 assignment: SET IDENTIFIER '=' expr .
   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    EQ   shift, and go to state 26
    NE   shift, and go to state 27
    '<'  shift, and go to state 28
    '>'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 12 (assignment)


state 53

   16 input_stmt: INPUT IDENTIFIER FROM USER .

    $default  reduce using rule 16 (input_stmt)


state 54

    3 stmt_list: stmt_list . stmt
   17 if_stmt: IF expr THEN stmt_list . if_tail

    DECLARE     shift, and go to state 1
    SET         shift, and go to state 2
    PRINT       shift, and go to state 3
    INPUT       shift, and go to state 4
    IF          shift, and go to state 5
    ELSE        shift, and go to state 55
    ELSEIF      shift, and go to state 56
    ENDIF       shift, and go to state 57
    END         shift, and go to state 58
    STOP        shift, and go to state 59
    DONE        shift, and go to state 60
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    stmt         go to state 25
    declaration  go to state 12
    assignment   go to state 13
    print_stmt   go to state 14
    input_stmt   go to state 15
    if_stmt      go to state 16
    if_tail      go to state 61
    expr         go to state 17


state 55

   22 if_tail: ELSE . stmt_list ENDIF
   23        | ELSE . stmt_list END IF
   24        | ELSE . stmt_list STOP
   25        | ELSE . stmt_list DONE

    DECLARE     shift, and go to state 1
    SET         shift, and go to state 2
    PRINT       shift, and go to state 3
    INPUT       shift, and go to state 4
    IF          shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    stmt_list    go to state 62
    stmt         go to state 11
    declaration  go to state 12
    assignment   go to state 13
    print_stmt   go to state 14
    input_stmt   go to state 15
    if_stmt      go to state 16
    expr         go to state 17


state 56

   26 if_tail: ELSEIF . expr THEN stmt_list if_tail

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    expr  go to state 63


state 57

   18 if_tail: ENDIF .

    $default  reduce using rule 18 (if_tail)


state 58

   19 if_tail: END . IF

    IF  shift, and go to state 64


state 59

   20 if_tail: STOP .

    $default  reduce using rule 20 (if_tail)


state 60

   21 if_tail: DONE .

    $default  reduce using rule 21 (if_tail)


state 61

   17 if_stmt: IF expr THEN stmt_list if_tail .

    $default  reduce using rule 17 (if_stmt)


state 62

    3 stmt_list: stmt_list . stmt
   22 if_tail: ELSE stmt_list . ENDIF
   23        | ELSE stmt_list . END IF
   24        | ELSE stmt_list . STOP
   25        | ELSE stmt_list . DONE

    DECLARE     shift, and go to state 1
    SET         shift, and go to state 2
    PRINT       shift, and go to state 3
    INPUT       shift, and go to state 4
    IF          shift, and go to state 5
    ENDIF       shift, and go to state 65
    END         shift, and go to state 66
    STOP        shift, and go to state 67
    DONE        shift, and go to state 68
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    stmt         go to state 25
    declaration  go to state 12
    assignment   go to state 13
    print_stmt   go to state 14
    input_stmt   go to state 15
    if_stmt      go to state 16
    expr         go to state 17


state 63

   26 if_tail: ELSEIF expr . THEN stmt_list if_tail
   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '<' expr
   33     | expr . '>' expr
   34     | expr . EQ expr
   35     | expr . NE expr

    THEN  shift, and go to state 69
    EQ    shift, and go to state 26
    NE    shift, and go to state 27
    '<'   shift, and go to state 28
    '>'   shift, and go to state 29
    '+'   shift, and go to state 30
    '-'   shift, and go to state 31
    '*'   shift, and go to state 32
    '/'   shift, and go to state 33
    '%'   shift, and go to state 34


state 64

   19 if_tail: END IF .

    $default  reduce using rule 19 (if_tail)


state 65

   22 if_tail: ELSE stmt_list ENDIF .

    $default  reduce using rule 22 (if_tail)


state 66

   23 if_tail: ELSE stmt_list END . IF

    IF  shift, and go to state 70


state 67

   24 if_tail: ELSE stmt_list STOP .

    $default  reduce using rule 24 (if_tail)


state 68

   25 if_tail: ELSE stmt_list DONE .

    $default  reduce using rule 25 (if_tail)


state 69

   26 if_tail: ELSEIF expr THEN . stmt_list if_tail

    DECLARE     shift, and go to state 1
    SET         shift, and go to state 2
    PRINT       shift, and go to state 3
    INPUT       shift, and go to state 4
    IF          shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    stmt_list    go to state 71
    stmt         go to state 11
    declaration  go to state 12
    assignment   go to state 13
    print_stmt   go to state 14
    input_stmt   go to state 15
    if_stmt      go to state 16
    expr         go to state 17


state 70

   23 if_tail: ELSE stmt_list END IF .

    $default  reduce using rule 23 (if_tail)


state 71

    3 stmt_list: stmt_list . stmt
   26 if_tail: ELSEIF expr THEN stmt_list . if_tail

    DECLARE     shift, and go to state 1
    SET         shift, and go to state 2
    PRINT       shift, and go to state 3
    INPUT       shift, and go to state 4
    IF          shift, and go to state 5
    ELSE        shift, and go to state 55
    ELSEIF      shift, and go to state 56
    ENDIF       shift, and go to state 57
    END         shift, and go to state 58
    STOP        shift, and go to state 59
    DONE        shift, and go to state 60
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    '('         shift, and go to state 8

    stmt         go to state 25
    declaration  go to state 12
    assignment   go to state 13
    print_stmt   go to state 14
    input_stmt   go to state 15
    if_stmt      go to state 16
    if_tail      go to state 72
    expr         go to state 17


state 72

   26 if_tail: ELSEIF expr THEN stmt_list if_tail .

    $default  reduce using rule 26 (if_tail)
